--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<!-- Init code chat-milvus //--><script src=https://chat.api.milvus.com.br/apichat/widget/script/a4c24280/c5a420862146d191e6b8fba4535e62182e4b3417c802255dc08429958eab726879d5989887cdfbe121256f5b3eeb3ffdd2b845e51e9becf47c75f5506d85d612456eed6a0d8de1fad264e2a7f99e96669a9ad714caa2d2087a770c9e03ebf7b7b9766e068c></script><!-- End code chat-milvus //-->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Suporte</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src='main.js'></script>
+</head>
+<body>
+   <!-- Init code chat-milvus //--><script src=https://chat.api.milvus.com.br/apichat/widget/script/a4c24280/c5a420862146d191e6b8fba4535e62182e4b3417c802255dc08429958eab726879d5989887cdfbe121256f5b3eeb3ffdd2b845e51e9becf47c75f5506d85d612456eed6a0d8de1fad264e2a7f99e96669a9ad714caa2d2087a770c9e03ebf7b7b9766e068c></script><!-- End code chat-milvus //-->
+</body>
+<script>
+document.onload(
+    window.location.href = "gruposopro:abrirchamado"
+);
+    
+
+</script>
+</html>
