--- a/index.html
+++ b/index.html
@@ -11,7 +11,5 @@
 <body>
 
 </body>
-<script>
-<!-- Init code chat-milvus //--><script src=https://chat.api.milvus.com.br/apichat/widget/script/a4c24280/c5a420862146d191e6b8fba4535e62182e4b3417c802255dc08429958eab726879d5989887cdfbe121256f5b3eeb3ffdd2b845e51e9becf47c75f5506d85d612456eed6a0d8de1fad264e2a7f99e96669a9ad714caa2d2087a770c9e03ebf7b7b9766e068c></script><!-- End code chat-milvus //-->
-</script>
+<script src=https://chat.api.milvus.com.br/apichat/widget/script/a4c24280/c5a420862146d191e6b8fba4535e62182e4b3417c802255dc08429958eab726879d5989887cdfbe121256f5b3eeb3ffdd2b845e51e9becf47c75f5506d85d612456eed6a0d8de1fad264e2a7f99e96669a9ad714caa2d2087a770c9e03ebf7b7b9766e068c></script>
 </html>
