--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
 <body>
 
 </body>
-<script src=https://chat.api.milvus.com.br/apichat/widget/script/a4c24280/c5a420862146d191e6b8fba4535e62182e4b3417c802255dc08429958eab726879d5989887cdfbe121256f5b3eeb3ffdd2b845e51e9becf47c75f5506d85d612456eed6a0d8de1fad264e2a7f99e96669a9ad714caa2d2087a770c9e03ebf7b7b9766e068c></script>
+<script src='https://chat.api.milvus.com.br/apichat/whatsapp/script/a4c24280/d7c337f63650d6eaf1c3fad55e271e71335d3702a812345ad38c489c99ba726571a4e6938abf9a8451566a4139f53af1d4c352f015eefd9a726c92506bf5d2144418896e7199f2fbd6659ca4ea8b9876eaf0d810a8ddb07a0a6101e762f9f0b6c30b7f0a90'></script>
 </html>
