--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
 <body>
 
 </body>
-<script src=https://chat.api.milvus.com.br/apichat/widget/script/a4c24280/c5a420862146d191e6b8fba4535e62182e4b3417c802255dc08429958eab726879d5989887cdfbe121256f5b3eeb3ffdd2b845e51e9becf47c75f5506d85d612456eed6a0d8de1fad264e2a7f99e96669a9ad714caa2d2087a770c9e03ebf7b7b9766e068c></script>
+<script src="https://chat.api.milvus.com.br/apichat/widget/script/aac44384/d9a334e02851cd93e3a79bb5525473793d5f3512aa74423ac48f3b9b8fa1131760a2989d8fb09de3532d673d25923be8aedf3ff87f91978c777fec431695ae152215fc6c09e191ffa40583bd8f8eec7f8284ce0ecbd1b6761c690ae668e7efa0c575606097"></script>
 </html>
