--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
 <body>
 
 </body>
-<script src="https://chat.api.milvus.com.br/apichat/widget/script/aac44384/d9a334e02851cd93e3a79bb5525473793d5f3512aa74423ac48f3b9b8fa1131760a2989d8fb09de3532d673d25923be8aedf3ff87f91978c777fec431695ae152215fc6c09e191ffa40583bd8f8eec7f8284ce0ecbd1b6761c690ae668e7efa0c575606097"></script>
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-ulW9fmrAZlBW-ncxGY6tQzygVUk31QU&sensor=false"></script>
 </html>
