--- a/index.html
+++ b/index.html
@@ -11,5 +11,5 @@
 <body>
 
 </body>
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-ulW9fmrAZlBW-ncxGY6tQzygVUk31QU&sensor=false"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-ulW9fmrAZlBW-ncxGY6tQzygVUk31QU&sensor=false"></script>
 </html>
